# festo-cpx-io

./: .gitignore  .gitlab-ci.yml  .pylintrc  CHANGELOG.md  DELETE.py  README.md  TO_DELETE_test.py  changelog.html  cpx_io.cli.html  cpx_io.cpx_system.cpx_ap.builder.html  cpx_io.cpx_system.cpx_ap.dataclasses.html  cpx_io.cpx_system.cpx_ap.html  cpx_io.cpx_system.cpx_e.html  cpx_io.cpx_system.html  cpx_io.html  cpx_io.utils.html  examples.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  renovate.json  requirements-cli.txt  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pull-request.yml  release.yml  tests.yml
_downloads/09bf92f2838593637660e7fa9bcd095e/: example_cpxap_startup.py
_downloads/194ee0d0516fb03ad762e6fdd0149e5d/: example_cpxe_add_module.py
_downloads/20ab453618a9fd1de4ed0049f596ce20/: example_cpxap_diagnosis.py
_downloads/28a82b1c14b8c91ed3fedc0dfddd0489/: example_cpxap_simple_diagnosis.py
_downloads/3780f08dca2308853510a7f07f376f81/: example_cpxap_iolink_ehps.py
_downloads/43e9f8785a9fb35984af0a148a3d9806/: example_cpxe_digital_input.py
_downloads/543af109b503fad7922747b74b2b99ef/: example_cpxe_iolink_ehps.py
_downloads/79404278a50ca4f58f697780e92b782a/: example_cpxe_digital_output.py
_downloads/b172a5e721b10882a64b4951c296bf8f/: example_cpxap_parameter_read_write.py
_downloads/b73d6cc8a54683edec97ec74d28d4e5e/: example_cpxap_timeout.py
_downloads/cc8f42d6cf604d1bf62c6cfecc33ab79/: example_cpxap_composition.py
_downloads/cda1bb76978b034aba17b8b87eae8787/: example_cpxe_modulelist.py
_downloads/da89f148c34e8737f0f43b5ff036be94/: example_cpxap_iolink_isdu_sdas.py
_downloads/f511e46a393ebcdca3ff82fb6b44ecbf/: example_cpxe_typecode.py
_sources/: cpx_io.cli.rst.txt  cpx_io.cpx_system.cpx_ap.builder.rst.txt  cpx_io.cpx_system.cpx_ap.dataclasses.rst.txt  cpx_io.cpx_system.cpx_ap.rst.txt  cpx_io.cpx_system.cpx_e.rst.txt  cpx_io.cpx_system.rst.txt  cpx_io.rst.txt  cpx_io.utils.rst.txt  examples.rst.txt  modules.rst.txt
_sources/features/: cli.md.txt
doc/source/: conf.py  examples.rst  index.rst
doc/source/features/: cli.md  cpx_io.md
docs/source/: conf.py  examples.rst  index.rst
docs/source/features/: cli.md  cpx-system  cpx_io.md
examples/: example_ap.py  example_cpxap.py  example_cpxap_cyclic.py  example_cpxap_digital_input.py  example_cpxap_digital_io.py  example_cpxap_digital_output.py  example_cpxap_fault_detection.py  example_cpxap_iolink_ehps.py  example_cpxap_iolink_isdu_sdas.py  example_cpxap_iolink_sdas.py  example_cpxap_iolink_switch_variant.py  example_cpxap_parameter_read_write.py  example_cpxe_add_module.py  example_cpxe_digital_input.py  example_cpxe_digital_io.py  example_cpxe_digital_output.py  example_cpxe_fault_detection.py  example_cpxe_iolink_ehps.py  example_cpxe_iolink_sdas.py  example_cpxe_modulelist.py  example_cpxe_typecode.py  example_e.py
features/: cli.html  cpx_io.html
src/cpx-io/cli/: cli.py
src/cpx_io/cli/: cli.py  cpx_ap.py  cpx_e.py  parameter.py
src/cpx_io/cpx_system/: cpx_ap.py  cpx_base.py  cpx_dataclasses.py  cpx_e.py  cpx_exceptions.py  cpx_module.py  io_thread.py  parameter_mapping.py
src/cpx_io/cpx_system/cpx_ap/: TO_DELETE_test.py  ap12di4do.py  ap16di.py  ap4aiui.py  ap4di.py  ap4di4do.py  ap4iol.py  ap8di.py  ap8do.py  ap_docu_generator.py  ap_enums.py  ap_modbus_registers.py  ap_module.py  ap_module_builder.py  ap_module_dataclasses.py  ap_parameter.py  ap_product_categories.py  ap_supported_datatypes.py  ap_supported_functions.py  apep.py  cpx_ap.py  cpx_ap_definitions.py  cpx_ap_enums.py  cpx_ap_modbus_commands.py  cpx_ap_module.py  cpx_ap_module_builder.py  cpx_ap_module_definitions.py  (+10 more)
src/cpx_io/utils/: boollist.py  helpers.py  logging.py
tests/: test_hw_cpx_e.py
tests/system_tests/: test_examples.py  test_hw_cpx_ap.py  test_hw_cpx_ap_a.py  test_hw_cpx_ap_i.py  test_hw_cpx_ap_mpa.py  test_hw_cpx_ap_mpa2.py  test_hw_cpx_base.py  test_hw_cpx_e.py  test_hw_timing.py  test_hw_vtux_as.py
tests/unit_tests/cli/: test_cli.py  test_cli_cpx_ap.py  test_cli_cpx_e.py
tests/unit_tests/cpx_system/: test_cpx_base.py  test_cpx_e.py  test_cpx_e4aiui.py  test_cpx_e8do.py
(+69 files in other folders)
