[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "festo-cpx-io"
description = "Library to control and access festo CPX modules"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "Martin Wiesner", email = "martin.wiesner@festo.com"},
    {name = "Elias Rosch", email = "elias.rosch@festo.com"},
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version", "dependencies", "optional-dependencies"]
requires-python = ">=3.10"

[project.scripts]
festo-cpx-io = "cpx_io.cli.cli:main"

[project.urls]
Homepage = "https://gitlab.com/festo-research/electric-automation/festo-cpx-io"
Documentation = "https://festo-research.gitlab.io/electric-automation/festo-cpx-io/"
Repository = "https://gitlab.com/festo-research/electric-automation/festo-cpx-io"
Changelog = "https://gitlab.com/festo-research/electric-automation/festo-cpx-io/-/blob/main/CHANGELOG.md"


[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests"]

[tool.setuptools_scm]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies.dev = {file = ["requirements-dev.txt"]}
optional-dependencies.cli = {file = ["requirements-cli.txt"]}