[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "festo-cpx-io"
description = "Library to control and access festo CPX modules"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "Jan Hildenbrand", email = "jan.hildenbrand@festo.com"},
    {name = "Martin Wiesner", email = "martin.wiesner@festo.com"},
    {name = "Elias Rosch", email = "elias.rosch@festo.com"},
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "pymodbus==3.12.0",
    "platformdirs>=4.5.0",
    "requests>=2.32.5",
]

[project.optional-dependencies]
cli = [
    "rich>=14.2.0"
]

[dependency-groups]
dev = [
    "black",
    "myst-parser",
    "pylint",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "setuptools",
    "sphinx",
    "sphinx-rtd-theme"
]


[project.scripts]
festo-cpx-io = "cpx_io.cli.cli:main"

[project.urls]
Homepage = "https://github.com/Festo-se/festo-cpx-io"
Documentation = "https://festo-se.github.io/festo-cpx-io/"
Repository = "https://github.com/Festo-se/festo-cpx-io"
Changelog = "https://github.com/Festo-se/festo-cpx-io/blob/main/CHANGELOG.md"


[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests"]

[tool.setuptools_scm]
